--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -1,5 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/common_bg"
@@ -160,18 +161,25 @@
                         android:gravity="center"
                         android:orientation="vertical">
 
-                        <ImageView
+                        <!--<ImageView-->
+                            <!--android:layout_width="50dp"-->
+                            <!--android:layout_height="50dp"-->
+                            <!--android:scaleType="fitXY"-->
+                            <!--android:src="@drawable/ic_xiyoumobile" />-->
+
+                        <de.hdodenhof.circleimageview.CircleImageView
                             android:layout_width="50dp"
                             android:layout_height="50dp"
-                            android:scaleType="fitXY"
-                            android:src="@drawable/ic_xiyoumobile" />
+                            app:civ_border_width="1dp"
+                            app:civ_border_color="@color/common_bg"
+                            android:src="@drawable/ic_head"/>
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:paddingBottom="15dp"
                             android:paddingTop="5dp"
-                            android:text="关于我们" />
+                            android:text="关于作者" />
 
                     </LinearLayout>
 
