--- a/app/src/main/res/layout/activity_app.xml
+++ b/app/src/main/res/layout/activity_app.xml
@@ -1,8 +1,7 @@
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:background="@color/base_bg"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:background="@color/base_bg">
 
     <LinearLayout
         android:id="@+id/ll_titile"
@@ -34,45 +33,45 @@
     </LinearLayout>
 
     <ListView
-        android:scrollbars="none"
-        android:layout_below="@+id/ll_titile"
         android:id="@+id/lv_app"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/ll_titile"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:dividerHeight="2dp"
         android:divider="@color/base_bg"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:dividerHeight="2dp"
+        android:scrollbars="none" />
 
     <LinearLayout
-        android:layout_alignParentBottom="true"
         android:id="@+id/ll_bottom"
-        android:elevation="3dp"
-        android:visibility="gone"
-        android:gravity="center_vertical"
-        android:background="@color/blue_dark"
         android:layout_width="fill_parent"
         android:layout_height="54dp"
-        android:orientation="horizontal">
+        android:layout_alignParentBottom="true"
+        android:background="@color/blue_dark"
+        android:elevation="3dp"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:visibility="gone">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"/>
+            android:layout_weight="1" />
 
         <LinearLayout
             android:id="@+id/btn_del"
             android:layout_width="wrap_content"
-            android:paddingLeft="5dp"
-            android:paddingRight="5dp"
-            android:orientation="vertical"
+            android:layout_height="wrap_content"
             android:gravity="center"
-            android:layout_height="wrap_content">
+            android:orientation="vertical"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp">
 
             <ImageView
-                android:background="@drawable/ic_fm_ob_ic_del_n"
                 android:layout_width="20dp"
-                android:layout_height="20dp"/>
+                android:layout_height="20dp"
+                android:background="@drawable/ic_fm_ob_ic_del_n" />
 
             <TextView
                 android:layout_width="1dp"
@@ -83,28 +82,28 @@
                 android:layout_height="wrap_content"
                 android:text="删除"
                 android:textColor="@color/base_color_text_white"
-                android:textSize="@dimen/text_size_small"/>
+                android:textSize="@dimen/text_size_small" />
 
         </LinearLayout>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"/>
+            android:layout_weight="1" />
 
         <LinearLayout
             android:id="@+id/btn_copy"
-            android:paddingLeft="5dp"
-            android:paddingRight="5dp"
             android:layout_width="wrap_content"
-            android:orientation="vertical"
+            android:layout_height="wrap_content"
             android:gravity="center"
-            android:layout_height="wrap_content">
+            android:orientation="vertical"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp">
 
             <ImageView
-                android:background="@drawable/ic_fm_ob_ic_copy_n"
                 android:layout_width="20dp"
-                android:layout_height="20dp"/>
+                android:layout_height="20dp"
+                android:background="@drawable/ic_fm_ob_ic_copy_n" />
 
             <TextView
                 android:layout_width="1dp"
@@ -115,28 +114,28 @@
                 android:layout_height="wrap_content"
                 android:text="复制"
                 android:textColor="@color/base_color_text_white"
-                android:textSize="@dimen/text_size_small"/>
+                android:textSize="@dimen/text_size_small" />
 
         </LinearLayout>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"/>
+            android:layout_weight="1" />
 
         <LinearLayout
             android:id="@+id/btn_move"
-            android:paddingLeft="5dp"
-            android:paddingRight="5dp"
             android:layout_width="wrap_content"
-            android:orientation="vertical"
+            android:layout_height="wrap_content"
             android:gravity="center"
-            android:layout_height="wrap_content">
+            android:orientation="vertical"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp">
 
             <ImageView
-                android:background="@drawable/ic_fm_ob_ic_move_n"
                 android:layout_width="20dp"
-                android:layout_height="20dp"/>
+                android:layout_height="20dp"
+                android:background="@drawable/ic_fm_ob_ic_move_n" />
 
             <TextView
                 android:layout_width="1dp"
@@ -147,28 +146,28 @@
                 android:layout_height="wrap_content"
                 android:text="剪切"
                 android:textColor="@color/base_color_text_white"
-                android:textSize="@dimen/text_size_small"/>
+                android:textSize="@dimen/text_size_small" />
 
         </LinearLayout>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"/>
+            android:layout_weight="1" />
 
         <LinearLayout
             android:id="@+id/btn_share"
-            android:paddingLeft="5dp"
-            android:paddingRight="5dp"
             android:layout_width="wrap_content"
-            android:orientation="vertical"
+            android:layout_height="wrap_content"
             android:gravity="center"
-            android:layout_height="wrap_content">
+            android:orientation="vertical"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp">
 
             <ImageView
-                android:background="@drawable/ic_fm_ob_ic_share_n"
                 android:layout_width="20dp"
-                android:layout_height="20dp"/>
+                android:layout_height="20dp"
+                android:background="@drawable/ic_fm_ob_ic_share_n" />
 
             <TextView
                 android:layout_width="1dp"
@@ -179,28 +178,28 @@
                 android:layout_height="wrap_content"
                 android:text="分享"
                 android:textColor="@color/base_color_text_white"
-                android:textSize="@dimen/text_size_small"/>
+                android:textSize="@dimen/text_size_small" />
 
         </LinearLayout>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"/>
+            android:layout_weight="1" />
 
         <LinearLayout
             android:id="@+id/btn_all"
-            android:paddingLeft="5dp"
-            android:paddingRight="5dp"
             android:layout_width="wrap_content"
-            android:orientation="vertical"
+            android:layout_height="wrap_content"
             android:gravity="center"
-            android:layout_height="wrap_content">
+            android:orientation="vertical"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp">
 
             <ImageView
-                android:background="@drawable/ic_fm_ob_ic_all_n"
                 android:layout_width="20dp"
-                android:layout_height="20dp"/>
+                android:layout_height="20dp"
+                android:background="@drawable/ic_fm_ob_ic_all_n" />
 
             <TextView
                 android:layout_width="1dp"
@@ -211,14 +210,14 @@
                 android:layout_height="wrap_content"
                 android:text="全选"
                 android:textColor="@color/base_color_text_white"
-                android:textSize="@dimen/text_size_small"/>
+                android:textSize="@dimen/text_size_small" />
 
         </LinearLayout>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"/>
+            android:layout_weight="1" />
 
     </LinearLayout>
 
