--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,8 +32,8 @@
                 android:id="@+id/tv_right"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:visibility="gone"
-                android:layout_weight="1"/>
+                android:layout_weight="1"
+                android:visibility="gone" />
 
             <com.getbase.floatingactionbutton.FloatingActionButton
                 android:id="@+id/fab_link"
@@ -49,8 +49,8 @@
                 android:id="@+id/tv_left"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:visibility="gone"
-                android:layout_weight="1"/>
+                android:layout_weight="1"
+                android:visibility="gone" />
 
         </LinearLayout>
 
