--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -1,6 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/common_bg"
@@ -162,17 +162,17 @@
                         android:orientation="vertical">
 
                         <!--<ImageView-->
-                            <!--android:layout_width="50dp"-->
-                            <!--android:layout_height="50dp"-->
-                            <!--android:scaleType="fitXY"-->
-                            <!--android:src="@drawable/ic_xiyoumobile" />-->
+                        <!--android:layout_width="50dp"-->
+                        <!--android:layout_height="50dp"-->
+                        <!--android:scaleType="fitXY"-->
+                        <!--android:src="@drawable/ic_xiyoumobile" />-->
 
                         <de.hdodenhof.circleimageview.CircleImageView
                             android:layout_width="50dp"
                             android:layout_height="50dp"
-                            app:civ_border_width="1dp"
+                            android:src="@drawable/ic_head"
                             app:civ_border_color="@color/common_bg"
-                            android:src="@drawable/ic_head"/>
+                            app:civ_border_width="1dp" />
 
                         <TextView
                             android:layout_width="wrap_content"
