--- a/app/src/main/res/layout/activity_shot.xml
+++ b/app/src/main/res/layout/activity_shot.xml
@@ -34,11 +34,11 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_marginBottom="149dp"
         android:id="@+id/ll_show"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_below="@+id/ll_titile"
+        android:layout_marginBottom="149dp"
         android:background="@color/blue_light"
         android:orientation="vertical">
 
@@ -56,12 +56,12 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_marginTop="-151dp"
         android:layout_width="fill_parent"
         android:layout_height="150dp"
-        android:layout_below="@+id/ll_show"
-        android:background="@color/common_bg"
         android:layout_alignParentBottom="true"
+        android:layout_below="@+id/ll_show"
+        android:layout_marginTop="-151dp"
+        android:background="@color/common_bg"
         android:gravity="center">
 
         <LinearLayout
@@ -81,12 +81,12 @@
                 android:weightSum="3">
 
                 <LinearLayout
-                    android:visibility="invisible"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="center"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:visibility="invisible">
 
                     <ImageView
                         android:layout_width="50dp"
@@ -125,12 +125,12 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:visibility="invisible"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="center"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:visibility="invisible">
 
                     <ImageView
                         android:layout_width="50dp"
