Major update: Joined the PPT and video control function, joined the new commands such as switching window and close the window the quick start to join the gesture control, improve the problem is out of harmony with the keyboard and mouse control in mobile phone input method and input method in computer.

--- a/app/src/main/res/layout/activity_remote.xml
+++ b/app/src/main/res/layout/activity_remote.xml
@@ -69,7 +69,7 @@
                             android:layout_height="wrap_content"
                             android:paddingBottom="15dp"
                             android:paddingTop="5dp"
-                            android:text="鼠标控制" />
+                            android:text="键鼠控制" />
 
                     </LinearLayout>
 
@@ -225,7 +225,7 @@
                             android:layout_height="wrap_content"
                             android:paddingBottom="15dp"
                             android:paddingTop="5dp"
-                            android:text="远程启动" />
+                            android:text="远程控制" />
 
                     </LinearLayout>
 
@@ -271,7 +271,7 @@
                             android:layout_height="wrap_content"
                             android:paddingBottom="15dp"
                             android:paddingTop="5dp"
-                            android:text="在线聊天" />
+                            android:text="聊天共享" />
 
                     </LinearLayout>
 
