--- a/app/src/main/res/layout/activity_remote2.xml
+++ b/app/src/main/res/layout/activity_remote2.xml
@@ -28,7 +28,7 @@
             android:layout_height="48dp"
             android:layout_marginLeft="-24dp"
             android:gravity="center"
-            android:text="键鼠控制"
+            android:text="远程控制"
             android:textColor="@color/base_color_text_white"
             android:textSize="@dimen/text_size_large" />
 
@@ -70,7 +70,7 @@
             android:layout_height="50dp"
             android:layout_centerVertical="true"
             android:layout_toLeftOf="@+id/center"
-            android:background="@drawable/l_letter"
+            android:background="@drawable/arrow_left"
             android:elevation="3dp" />
 
         <Button
@@ -79,25 +79,25 @@
             android:layout_height="50dp"
             android:layout_centerVertical="true"
             android:layout_toRightOf="@+id/center"
-            android:background="@drawable/r_letter"
+            android:background="@drawable/arrow_right"
             android:elevation="3dp" />
 
         <Button
-            android:id="@+id/btn_roll_up"
+            android:id="@+id/btn_up"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_above="@+id/center"
             android:layout_centerHorizontal="true"
-            android:background="@drawable/w_letter"
+            android:background="@drawable/arrow_up"
             android:elevation="3dp" />
 
         <Button
-            android:id="@+id/btn_roll_down"
+            android:id="@+id/btn_down"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_below="@+id/center"
             android:layout_centerHorizontal="true"
-            android:background="@drawable/m_letter"
+            android:background="@drawable/arrow_down"
             android:elevation="3dp" />
 
         <Button
@@ -136,21 +136,16 @@
         android:focusable="true"
         android:gravity="center" />
 
-    <EditText
-        android:id="@+id/et_keyboard"
+    <Button
+        android:id="@+id/btn_play"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_above="@+id/rl_button"
         android:layout_alignParentRight="true"
         android:layout_marginRight="25dp"
-        android:background="@drawable/ic_keyboard"
-        android:cursorVisible="false"
+        android:background="@drawable/ic_play"
         android:elevation="3dp"
         android:focusable="true"
-        android:gravity="center"
-        android:text=""
-        android:textColor="@color/base_color_text_white"
-        android:textSize="20sp"
-        android:textStyle="bold" />
+        android:gravity="center" />
 
 </RelativeLayout>
